Fix #63 Custom logo is not totally covered by the back button in project internal pages

--- a/less/style.less
+++ b/less/style.less
@@ -35,12 +35,13 @@ a, a:hover, a:visited, a:link {
 
 .task-icon-link[href='/'] {
   position: absolute;
-  top: 12px;
-  left: 20px;
+  top: 0;
+  left: 0;
   background-color: @color-link;
-  height: 40px;
-  width: 170px;
+  height: 64px;
+  width: 250px;
   z-index: 3000;
+  padding: 12px;
 
   &:hover {
     opacity: 1 !important;
